# svcindex

./: .gitignore  README.md  pyproject.toml  svcindex_v0_2.zip:Zone.Identifier
docs/: LLM_HANDOFF.md  architecture.md  docker-labels.md  hub-ha-later.md  ports.md  service-schema.md
examples/services.d/: grafana.yaml  postgres.yaml  unmonitored.yaml
scripts/: bootstrap-host.sh  bootstrap-hub.sh  bootstrap.sh  install-consul-agent.sh  install-consul-server.sh  install-svcindex.sh  svcindex-docker-run.sh
svcindex/: checks.py  consul_client.py  consul_sync.py  docker_discovery.py  main.py  registry.py  util.py  webapp.py
svcindex/static/: style.css
svcindex/templates/: index.html
